# playground

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.takt/facets/policies/: coding.md  testing.md
.takt/runs/20260626-061725-implement-using-only-the-files-w5b4nz/: meta.json  trace.md
docs/superpowers/specs/: 2026-06-27-atomic-design-refactor-design.md
docs/takt/: order-template.md
src/: App.tsx  Game.tsx
src/assets/: free_haiku.wasm  gacha_core.wasm  leap_to_freedom.wasm
src/components/: AccordionItem.tsx
src/components/atoms/: BackLink.tsx  PageFooter.tsx  SlidesLink.tsx
src/components/molecules/: ListPanel.tsx
src/components/pages/: Chat.tsx  FreeHaiku.css  FreeHaiku.test.tsx  FreeHaiku.tsx  Insider.tsx  JiyuGacha.css  JiyuGacha.test.tsx  JiyuGacha.tsx  JoyaNoKane.tsx  LeapToFreedom.css  (+4 more)
src/hooks/: useWasm.ts
src/lib/: links.ts  seed.ts  storage.ts
src/test/: FreeHaiku.test.tsx  JiyuGacha.test.tsx  LeapToFreedom.test.tsx  ListPanel.test.tsx  SlidesLink.test.tsx  setup.ts  useWasm.test.tsx  wasm.ts
src/utils/: string.ts
tf/: main.tf
wasm/free-haiku/: Cargo.toml  build.sh
wasm/free-haiku/src/: compose.rs  lib.rs  rng.rs  score.rs
wasm/free-haiku/tests/: compose_test.rs  ffi_test.rs  rng_test.rs  score_test.rs
wasm/jiyu-gacha/: .gitignore  Cargo.toml  README.md  build.sh
wasm/jiyu-gacha/src/: engine.rs  lib.rs
wasm/leap-to-freedom/: Cargo.toml  build.sh
wasm/leap-to-freedom/src/: game.rs  lib.rs  rng.rs
wasm/leap-to-freedom/tests/: ffi_test.rs  game_test.rs  rng_test.rs
(+37 files in other folders)
